# LoRA-Merger-ComfyUI

./: .gitignore  CLAUDE.md  GRADIENT_SEMANTIC_IMPLEMENTATION.md  LICENSE  QUICK_START_GRADIENT_ANALYZER.md  README.md  __init__.py  checkpoint_merge.py  debug_keys.py  lora_apply.py  lora_attention_logger.py  lora_block_sampler.py  lora_load.py  lora_merge.py  lora_merge_xy.py  lora_mergekit_merge.py  lora_save.py  lora_stack_sampler.py  lora_svd_merge.py  mergekit_utils.py  nodes_experimental_methods.py  nodes_merge_methods.py  peft_utils.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_pytest.py  sd_lora.py  test_gradient_analyzer_sd15_e2e.py  test_gradient_analyzer_sdxl_e2e.py  test_gradient_analyzer_with_semantic_adapter_sd15_e2e.py  utility.py  wan_lora.py
architectures/: general_architecture.py
deprecated/: __init__,py.py  lora_merge.py  lora_merge_xy.py  lora_svd_merge.py
experimental/: __init__,py.py  checkpoint_merge.py  lora_analyzer.py  lora_prune.py
js/: help-popup.js  lora-block-editor.js  lora-merge.js  lora-power-stacker.js
src/: comfy_util.py  lora_apply.py  lora_block_sampler.py  lora_decompose.py  lora_dir_stacker.py  lora_load.py  lora_mergekit_merge.py  lora_parameter_sweep_sampler.py  lora_power_stacker.py  lora_resize.py  lora_save.py  lora_selector.py  lora_stack_sampler.py  mergekit_utils.py  nodes_lora_modifier.py  nodes_merge_methods.py  nodes_semantic_analysis.py  nodes_semantic_merge.py  types.py  utility.py
tests/: __init__.py  conftest.py  test_adapter_dtype_safety.py  test_adapter_initialization.py  (+11 more)
(+70 files in other folders)
