[project]
name = "lora-merger-comfyui"
description = "An extension for merging LoRAs. Offers a wide range of LoRA merge techniques (including dare) and XY plots. XY plots require efficiency nodes."
version = "2.1.0"
license = "MIT"

[project.urls]
Repository = "https://github.com/larsupb/LoRA-Merger-ComfyUI"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "larsupb"
DisplayName = "LoRA-Merger-ComfyUI"
Icon = ""
